// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose your Room type page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
      "release_pi_bb_account_serv_2_serv": true,
      "release_pi_bb_ccui_choose_room_type": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
  },
}
`;

exports[`Choose your Room type page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
      "release_pi_bb_account_serv_2_serv": true,
      "release_pi_bb_ccui_choose_room_type": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
  },
}
`;

exports[`Choose your Room type page should match the snapshot 1`] = `
<div>
  <div
    data-testid="SecondaryHDPLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="ChooseRoomTypePage"
      />
    </div>
  </div>
</div>
`;
